No Singleton for CommandHandler. Use global instance in PaintroidApplication. Use LinkedList in CommandHandler. Synchronize all methods in CommandHandler.